fixed spacing for article view

--- a/assets/sass/_post.scss
+++ b/assets/sass/_post.scss
@@ -38,6 +38,8 @@
 }
 
 .post-content {
+  margin: 4em 0 0 0;
+
   a:hover {
     border-bottom: 1px dotted $primary;
     padding: 0 0 2px;
